# enclave-configuration-service

./: .clang-dirs  .clang-format  .clang-white-list  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  README.md  build.sh
admin/: CMakeLists.txt
admin/aecsadmin/: aecsadmin.cpp  aecsadmin_grpc_client.cpp  aecsadmin_grpc_client.h
admin/common/: kubeconfig_parser.cpp  kubeconfig_parser.h
admin/serviceadmin/: serviceadmin.cpp  serviceadmin_grpc_client.cpp  serviceadmin_grpc_client.h  serviceadmin_secret_policy.cpp  serviceadmin_secret_policy.h
client/: CMakeLists.txt
client/aecsadmin/: aecsadmin.cpp  aecsadmin_grpc_client.cpp  aecsadmin_grpc_client.h
client/common/: kubeconfig_parser.cpp  kubeconfig_parser.h
client/cpp/: CMakeLists.txt
client/cpp/enclave/: enclave.config.xml
client/cpp/trusted/: trusted_functions.h
client/cpp/untrusted/: untrusted_aecs_client.cpp  untrusted_aecs_client_main.cpp
client/cpp_occlum/: .gitignore  CMakeLists.txt  README.md  bom_aecs_client_gnu.yaml  occlum_build_aecs_client.sh  occlum_build_prepare.sh  occlum_run_aecs_client.sh
client/cpp_occlum/occlum_aecs_client_lib/: CMakeLists.txt  occlum_aecs_client_main.cpp
client/cpp_occlum/occlum_aecs_client_lib/src/: occlum_aecs_client_lib.cpp  occlum_aecs_client_lib.h  occlum_aecs_client_lib_c.h  public_aecs_client_lib.cpp  public_aecs_client_lib.h  public_aecs_client_lib_c.h
client/cpp_sdk/: CMakeLists.txt
client/cpp_sdk/enclave/: enclave.edl
client/cpp_sdk/trusted/: trusted_functions.cpp
client/cpp_sdk/untrusted/: untrusted_aecs_client.cpp  untrusted_aecs_client.h  untrusted_aecs_client_main.cpp
client/serviceadmin/: serviceadmin.cpp  serviceadmin_grpc_client.cpp  serviceadmin_grpc_client.h  serviceadmin_secret_policy.cpp  serviceadmin_secret_policy.h
common/untrusted/: untrusted_enclave.cpp
deployment/: .gitignore  aecs_test.sh  create_image.sh  dockerbuild.sh  dockerenv.sh  gencert  generate_certs_and_kubeconfig.sh  run_image.sh
deployment/conf/: aecs_admin_test.kubeconfig  aecs_server.json  enclave.config.release.xml  kubetee.json  service_admin_test.kubeconfig  service_secret_policy.yaml  ta_secret_policy.yaml
deployment/dockerfile/: Dockerfile
include/aecs/: error.h  untrusted_config.h  untrusted_enclave.h  version.h
proto/: CMakeLists.txt  aecs.proto  aecs_admin.proto  aecs_service.proto
server/: CMakeLists.txt
server/storage_backend_fs/: CMakeLists.txt  untrusted_storage_localfs.cpp  untrusted_storage_localfs.h
server/trusted/: trusted_cert.cpp  trusted_cert.h  trusted_functions.cpp  trusted_functions.h  trusted_storage.cpp  trusted_storage.h
server/untrusted/: untrusted_aecs_client.cpp  untrusted_aecs_client.h  untrusted_aecs_config.cpp  untrusted_aecs_config.h  untrusted_aecs_main.cpp  untrusted_aecs_server.cpp  untrusted_aecs_server.h  untrusted_function.cpp  untrusted_function_storage.cpp  untrusted_function_storage.h  untrusted_storage_backend.cpp  untrusted_storage_backend.h
